--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,10 +27,28 @@ jobs:
 
       - name: 📦 Zip shadow JAR
         run: |
-            mkdir release
-            cp build/libs/external-data-sheet-*.jar release/external-data-sheet-${{ github.ref_name }}.jar
-            cd release && zip external-data-sheet-${{ github.ref_name }}.zip *.jar
-            
+            # Make sure the JAR is there
+            echo "Contents of build/libs:"  
+            ls -lh build/libs
+
+            # Prepare release directory
+            mkdir -p release
+
+            # Pick up exactly one shadow JAR
+            JAR_PATH=$(ls build/libs/external-data-sheet-*.jar | head -n1)
+            echo "Found shadow JAR at $JAR_PATH"
+
+            # Copy into release/ (preserving its real filename)
+            cp "$JAR_PATH" release/
+
+            # Zip it under the tag name
+            cd release
+            zip external-data-sheet-${{ github.ref_name }}.zip external-data-sheet-*.jar
+
+            # List what we’re uploading
+            ls -lh
+
+
       - name: 🚀 Create GitHub Release
         uses: softprops/action-gh-release@v1
         with:
