--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
                              http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.katalon</groupId>
+  <groupId>com.badru</groupId>
   <artifactId>external-data-sheet</artifactId>
   <version>1.0.0</version>
   <packaging>jar</packaging>
