edit pom and plugin

--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
     <developer>
       <id>badrusalam11</id>
       <name>Muhamad Badru Salam</name>
-      <email>you@example.com</email>
+      <email>badrusalam760@gmail.com</email>
       <url>https://github.com/badrusalam11</url>
     </developer>
   </developers>
